@@ -3,7 +3,7 @@
     <div id="piepagina">
         <div id="copyright">
             <!-- Copyright -->
-            <p>Copyright &copy; 2005-2006 <a href="mailto:mave@mail.berlios.de">G. Massera</a></p>
+            <p>Copyright &copy; 2005-2006 <a href="mailto:mave@_odiolospam_mail.berlios.de">G. Massera</a></p>
 
             <!-- Created: Fri Sep  2 17:38:04 CEST 2005 -->
             <p>Last modified: 27-03-2006 11:15:46 CEST</p>
