@@ -15,6 +15,11 @@ S <mave> comment goes here
     'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
 ==== End of Legend ====
 
+    ==> 101 - 10/10/2006 <==
+
+C <mave> all OutputFunction (except for PoolFunction) are propertized
+C <mave> VectorData copy-constructor create always a VectorData with own data allocated
+
     ==> 100 - 05/10/2006 <==
 
 C <mave> CopyLinker propertized
